--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "dependencies": {
     "base-api-io": "^1.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sanitize-html": "^1.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
