--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "passport-local": "^1.0.0",
     "redis": "^2.8.0",
     "sanitize-html": "^1.20.1",
-    "stripe": "^7.8.0"
+    "stripe": "^7.8.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
