--- a/package.json
+++ b/package.json
@@ -6,8 +6,17 @@
   "private": true,
   "dependencies": {
     "base-api-io": "^1.2.0",
+    "bcrypt": "^3.0.6",
+    "connect-redis": "^4.0.2",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "sanitize-html": "^1.20.1"
+    "express-session": "^1.16.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "redis": "^2.8.0",
+    "sanitize-html": "^1.20.1",
+    "stripe": "^7.8.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
