--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "base-api-io": "^1.2.0",
     "bcrypt": "^3.0.6",
     "connect-redis": "^4.0.2",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "jsonwebtoken": "^8.5.1",
+    "log4js": "^5.1.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "redis": "^2.8.0",
