--- a/package.json
+++ b/package.json
@@ -5,38 +5,31 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "base-api-io": "^1.5.0",
     "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-jwt": "^5.3.1",
-    "jwks-rsa": "^1.6.0",
-    "log4js": "^6.1.0",
-    "mongodb": "^3.3.4",
-    "sanitize-html": "^1.20.1",
-    "stripe": "^7.13.1",
-    "uuid": "^3.3.3"
+    "express-jwt": "^6.0.0",
+    "jwks-rsa": "^1.12.1",
+    "log4js": "^6.3.0",
+    "mongodb": "^3.6.3",
+    "nodemailer": "^6.4.17",
+    "sanitize-html": "^2.3.0",
+    "stripe": "^8.129.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/plugin-proposal-class-properties": "^7.7.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-react": "^7.7.0",
-    "babel-eslint": "^10.0.2",
-    "babel-loader": "^8.0.6",
-    "eslint": "5.16.0",
-    "eslint-config-airbnb": "17.1.1",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "7.16.0",
-    "prettier": "^1.19.1"
+    "babel-eslint": "^10.1.0",
+    "eslint": "7.16.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1"
   },
   "scripts": {
     "start": "node app.js"
