--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Rachel's Studio Backend",
   "license": "MIT",
   "private": true,
+  "type": "module",
+  "main": "server.js",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "eslint-plugin-import": "^2.22.1",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "jwks-rsa": "^1.12.1",
@@ -17,14 +17,14 @@
     "mongodb": "^3.6.3",
     "nodemailer": "^6.4.17",
     "sanitize-html": "^2.3.0",
-    "stripe": "^8.129.0",
-    "uuid": "^8.3.2"
+    "stripe": "^8.129.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "7.16.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "7.22.0",
@@ -32,6 +32,6 @@
     "prettier": "^2.2.1"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node src/app.js"
   }
 }
