--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "helmet": "^4.3.1",
     "jwks-rsa": "^1.12.1",
     "log4js": "^6.3.0",
     "mongodb": "^3.6.3",
