--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,12 @@
 {
   "parser": "babel-eslint",
-  "extends": ["airbnb", "prettier"],
+  "extends": ["airbnb-base", "prettier"],
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": ["error"],
     "react/forbid-prop-types": 0
   },
   "env": {
-    "browser": true,
     "node": true,
     "es6": true
   }
